GITForce/src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Invitation__c</fullName>
        <label>Invitation</label>
        <referenceTo>Invitation__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses_Invitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <formula>Question__r.Question_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <formula>CASE(Question__r.Type__c,
&apos;String&apos;,&apos;String&apos;,
&apos;Date&apos;,&apos;Date&apos;,
&apos;Boolean&apos;,&apos;Boolean&apos;,
&apos;TextArea&apos;,&apos;TextArea&apos;,
&apos;Radio&apos;,&apos;Radio&apos;,
&apos;Integer&apos;,&apos;Integer&apos;,
&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Bool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Yes No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Number__c</fullName>
        <label>Response Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <formula>CASE(Question__r.Type__c,
&apos;Boolean&apos;,IF ( Response_Bool__c , &apos;true&apos; , &apos;false&apos;),
&apos;String&apos;,Response__c,
&apos;TextArea&apos;,Text_Area__c,
&apos;Integer&apos;,TEXT(Response_Number__c),
&apos;Radio&apos;,TEXT(Response_Number__c),
&apos;Date&apos;,TEXT(Response_Date__c),
&apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <label>Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invitation__c</columns>
        <columns>Question__c</columns>
        <columns>Question_Text__c</columns>
        <columns>Question_Type__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Summary__c</columns>
        <columns>Response_Number__c</columns>
        <columns>Response__c</columns>
        <columns>Response_Bool__c</columns>
        <columns>Text_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>